<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/lwMessage"
        android:layout_above="@id/llSendMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        tools:listitem="@layout/message_item" />

    <LinearLayout
        android:id="@+id/llSendMessage"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/iBtnSendPhoto"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_insert_photo_black_24dp"
            android:contentDescription="@string/send_photo" />


        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:hint="@string/enter_message" />

        <ImageButton
            android:id="@+id/iBtnSendMessage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/send"
            android:background="@drawable/ic_send_grey_24dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


</RelativeLayout>